--- a/ideax/templates/ideax/includes/modals.html
+++ b/ideax/templates/ideax/includes/modals.html
@@ -1,17 +1,17 @@
 <div class="modal fade" id="modal-idea">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
     </div>
   </div>
 </div>
 <div class="modal fade" id="modal-idea-crud">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
     </div>
   </div>
 </div>
 <div class="modal fade" id="modal-category-crud">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
     </div>
   </div>
