--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -19,7 +19,7 @@
         </h1>
         {% if user.is_authenticated %}
         <div class="menu">
-          <a class="icon  js-create-idea" href="javascript:void(0)" data-modal="#modal-idea-crud" data-url="/idea/new/" class="top-menu js-create-idea">
+          <a class="icon  js-create-idea" href="/idea/new/" class="top-menu js-create-idea">
             <span><i class="fas fa-plus"></i><i class="fas fa-lightbulb"></i></span>
             <p>{% trans 'New Idea' %}</p>
           </a>
