--- a/ideax/templates/ideax/idea_edit.html
+++ b/ideax/templates/ideax/idea_edit.html
@@ -3,24 +3,10 @@
 
 
 {% block content %}
-    <h1>{% trans 'New Idea' %}</h1>
-
-    <form method="post" class="post-form">
-      {% csrf_token %}
-      {% for field in form.visible_fields %}
-        <div class="form-group">
-          <label for="{{field.id_for_label}}">{{field.label}}</label>
-          {{ field|add_class:'form_control' }}
-          {% for error in field.errors %}
-            <p class="help-block">{{ error }}</p>
-          {% endfor %}
-        </div>
-      {% endfor %}
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">
-          <span class="glyphicon glyphicon-ok"></span> {% trans 'Save' %}
-        </button>
-
-      </div>
-    </form>
+  <h4 class="modal-title">{% trans 'Update_Idea' %}</h4>
+  <form method="post" class="post-form js-idea-update-form" action="{% url 'idea_edit' form.instance.pk %}" data-modal="#modal-idea-crud" data-list-div="#idea-list">
+    {% csrf_token %}
+    {% include 'ideax/includes/partial_idea_form.html' %}
+    <button type="submit" class="btn btn-primary">{% trans 'Update' %}</button>
+  </form>
 {% endblock %}
