new idea and idea edit pages html structure and css, discard idea modal string and css fixes

--- a/ideax/templates/ideax/includes/partial_idea_remove.html
+++ b/ideax/templates/ideax/includes/partial_idea_remove.html
@@ -13,11 +13,10 @@
 
   <div class="modal-body">
     <p class="lead">
-      {% trans 'Would you like to delete the idea?' %} <strong>{{idea.title}}</strong> ?
+      {% trans 'Would you like to delete the idea:' %} <span class="bold">{{idea.title}}</span> ?
     </p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans 'Close' %}</button>
-    <button type="submit" class="btn btn-primary">{% trans 'Discard' %}</button>
+    <button type="submit" class="btn btn-primary">{% trans 'Confirm' %}</button>
   </div>
 </form>
