--- a/ideax/templates/ideax/idea_edit.html
+++ b/ideax/templates/ideax/idea_edit.html
@@ -3,10 +3,18 @@
 
 
 {% block content %}
-  <h4 class="modal-title">{% trans 'Update_Idea' %}</h4>
+<div class="idea-form">
+
   <form method="post" class="post-form js-idea-update-form" action="{% url 'idea_edit' form.instance.pk %}" data-modal="#modal-idea-crud" data-list-div="#idea-list">
     {% csrf_token %}
-    {% include 'ideax/includes/partial_idea_form.html' %}
-    <button type="submit" class="btn btn-primary">{% trans 'Update' %}</button>
+    <div class="idea-form-header">
+      <i class="far fa-edit"></i>
+      <h4 class="modal-title">{% trans 'Update_Idea' %}</h4>
+    </div>
+    <div class="idea-form-body">
+      {% include 'ideax/includes/partial_idea_form.html' %}
+      <button type="submit" class="btn btn-primary">{% trans 'Update' %}</button>
+    </div>
   </form>
+</div>
 {% endblock %}
