--- a/ideax/templates/ideax/idea_new.html
+++ b/ideax/templates/ideax/idea_new.html
@@ -3,11 +3,18 @@
 
 {% block content %}
 
-<form method="post" class="post-form js-idea-create-form" action="{% url 'idea_new' %}" data-modal="#modal-idea-crud" data-list-div="#idea-list">
-  {% csrf_token %}
-  <h4>{% trans 'Create Idea' %}</h4>
-  {% include 'ideax/includes/partial_idea_form.html' %}
-  <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-</form>
+  <div class="idea-form">
+    <form method="post" class="post-form js-idea-create-form" action="{% url 'idea_new' %}" data-modal="#modal-idea-crud" data-list-div="#idea-list">
+      {% csrf_token %}
+      <div class="idea-form-header">
+        <i class="far fa-lightbulb"></i>
+        <h4>{% trans 'Create Idea' %}</h4>
+      </div>
+      <div class="idea-form-body">
+        {% include 'ideax/includes/partial_idea_form.html' %}
+        <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
+      </div>
+    </form>
+  </div>
 
 {% endblock %}
