--- a/ideax/templates/ideax/idea_detail.html
+++ b/ideax/templates/ideax/idea_detail.html
@@ -6,7 +6,7 @@
       <h2 class="desc-title">
         {{ idea.title }}
       </h2>
-      <p class="author">Por {{ idea.author.get_full_name }}</p>
+      <p class="author">Por {{ idea.author.user.get_full_name }}</p>
   </div>
   <div class="idea-page">
     <div class="idea-desc">
