date string on footer

--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -40,7 +40,7 @@
         {% block content %}
         {% endblock %}
       </div>
-      <footer {% if not user.is_authenticated %}class="landing-page"{% endif %} ><div class="logo"><p class="alpha-version">Idea X - Software in alpha stage</p></div></footer>
+      <footer {% if not user.is_authenticated %}class="landing-page"{% endif %} ><div class="logo"><p class="alpha-version">Idea X - Software in alpha stage 2018-03-29</p></div></footer>
       <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
       <script src="{% static '/js/jquery-3.3.1.min.js' %}"></script>
       <script src="{% static '/js/popper.min.js' %}"></script>
