--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -41,10 +41,11 @@
         {% endblock %}
       </div>
       <footer {% if not user.is_authenticated %}class="landing-page"{% endif %} ><div class="logo"><p class="alpha-version">Idea X - Software in alpha stage 2018-03-29</p></div></footer>
-      <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
       <script src="{% static '/js/jquery-3.3.1.min.js' %}"></script>
       <script src="{% static '/js/popper.min.js' %}"></script>
       <script src="{% static '/js/bootstrap.min.js' %}"></script>
+      <script src="{% static '/js/fontawesome-all.min.js' %}"></script>
+      <script src="{% static '/js/fontawesome.js' %}"></script>
       <script src="{% static '/js/idea.js' %}"></script>
 
 
