--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -3,7 +3,7 @@
 <div class="idea {{idea.get_current_phase.css_class}}">
   <!-- idea card header -->
   <div class="idea-header">
-    <h1 class="idea-title">
+    <h1 class="idea-title" data-toggle="tooltip" data-placement="bottom" title="{{ idea.title }}">
       {{ idea.title }}
     </h1>
     <!-- <p class="date">
