--- a/ideax/templates/ideax/includes/partial_comments.html
+++ b/ideax/templates/ideax/includes/partial_comments.html
@@ -9,7 +9,7 @@
       </div>
       <div class="media-body">
         <div class="mt-0 comment-header">
-          <span class="c-author">{{ node.author.username }}</span>
+          <span class="c-author">{{ node.author.user}}</span>
           <span class="c-date">{{ node.date|date:"d/m/Y h:m"}}</span>
         </div>
         <div class="comment-body">
@@ -28,4 +28,3 @@
       </div>
     {% endrecursetree %}
   </div>
-  
