--- a/ideax/templates/ideax/idea_list.html
+++ b/ideax/templates/ideax/idea_list.html
@@ -18,7 +18,7 @@
       </ul>
     </nav>
     {% for message in messages %}
-      <div class="alert alert-dismissible alert-{{ message.tags }}">
+      <div class="alert alert-dismissible alert-{% if message.tags == 'error' %}danger{%else%}{{message.tags}}{%endif%}">
           <button type="button" class="close" data-dismiss="alert">×</button>
           {{ message }}
       </div>
