--- a/ideax/templates/ideax/includes/partial_comments.html
+++ b/ideax/templates/ideax/includes/partial_comments.html
@@ -10,13 +10,13 @@
       <div class="media-body">
         <div class="mt-0 comment-header">
           <span class="c-author">{{ node.author.user}}</span>
-          <span class="c-date">{{ node.date|date:"d/m/Y h:m"}}</span>
+          <span class="c-date">{{ node.date|date:"d/m/Y H:m"}}</span>
         </div>
         <div class="comment-body">
           {{ node.raw_comment|safe }}
         </div>
         <div class="reply-link reply-container">
-          <a href="javascript:void(0)" data-idea-id="{{idea_id}}" data-parent-id="{{ node.id }}" name="replyButton">reply</a>
+          <a href="javascript:void(0)" data-idea-id="{{idea_id}}" data-parent-id="{{ node.id }}" name="replyButton">{% trans 'reply' %}</a>
         </div>
         {% if not node.is_leaf_node %}
         <div class="reply">
