--- a/ideax/templates/ideax/idea_edit.html
+++ b/ideax/templates/ideax/idea_edit.html
@@ -13,7 +13,10 @@
     </div>
     <div class="idea-form-body">
       {% include 'ideax/includes/partial_idea_form.html' %}
-      <button type="submit" class="btn btn-primary">{% trans 'Update' %}</button>
+      <div class="button-group">
+        <a class="back-redirect btn" href="/">{% trans 'Return' %}</a>
+        <button type="submit" class="btn btn-primary">{% trans 'Update' %}</button>
+      </div>
     </div>
   </form>
 </div>
