--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -5,6 +5,7 @@
 <html>
     <head>
         <title>Ideia X</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{% static 'css/idea.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
