responsivity enabling config

--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -45,7 +45,7 @@
       <script src="{% static '/js/popper.min.js' %}"></script>
       <script src="{% static '/js/bootstrap.min.js' %}"></script>
       <script src="{% static '/js/fontawesome-all.min.js' %}"></script>
-      <script src="{% static '/js/fontawesome.js' %}"></script>
+      <!-- <script src="{% static '/js/fontawesome.js' %}"></script> -->
       <script src="{% static '/js/idea.js' %}"></script>
 
 
