--- a/ideax/static/css/idea.css
+++ b/ideax/static/css/idea.css
@@ -494,8 +494,25 @@ input.menu-input{
   font-size: 0.9em;
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 10px 20px;
+  padding: 5px 20px;
   min-height: 200px;
+}
+
+.idea-author {
+  text-align:center;
+  margin-bottom: 0.3em;
+}
+
+.idea-description {
+  margin-bottom: 0;
+}
+
+.read-more {
+  text-align: center;
+  margin-top: 0.5em;
+  margin-bottom: 0;
+  color: #007bff;
+  display: block;
 }
 
 .idea-body:hover{
