--- a/ideax/templates/ideax/includes/evaluation.html
+++ b/ideax/templates/ideax/includes/evaluation.html
@@ -12,7 +12,7 @@
   {% for field in form_evaluation %}
     <div class="form-group{% if field.errors %} has-error{% endif %}">
       {% if field.label != '' %}
-        <label for="{{field.id_for_label}}">{{field.label}}</label>
+        <label for="{{field.id_for_label}}" data-toggle="tooltip" data-placement="bottom" title="{{field.help_text}}" >{{field.label}}</label>
       {%endif%}
       {{ field|add_class:'form_control' }}
       {% for error in field.errors %}
