--- a/ideax/static/css/report.css
+++ b/ideax/static/css/report.css
@@ -3,9 +3,12 @@
       content: element(pageHeader);
   }
   @bottom-right{
-
-        content: element(pageFooter);
-    }
-
-
+        border-top: 0.5pt solid;
+        content: "Página " counter(page) " de " counter(pages);
+  }
+    @media print {
+      #divHeader{
+          position: running(pageHeader);
+      }
+  }
 }
