--- a/ideax/templates/ideax/ftec.html
+++ b/ideax/templates/ideax/ftec.html
@@ -14,26 +14,28 @@
 </head>
 
 <body>
-
-<div class="wrapper">
+  <!-- BODY -->
   <!-- HEADER -->
-  <div class="ftec-header">
-    <img class="dtp-logo" src="../../static/images/logo-dtp.png" alt="">
-    <div class="header-text-container">
-      <div class="dept-group">
-        <p>Diretoria de Relacionamento, Desenvolvimento e Informações - DRD</p>
-        <p>Departamento de Inovação - DEIN</p>
-        <p>Divisão de Estruturação, Processos e Tecnologia para Inovação - DIEP</p>
-      </div>
-      <div class="meta-info">
-        <p>Processo de Inovação Dataprev</p>
-        <p>Ficha Técnica da Idéia</p>
+    <div class="ftec-header" id="header-report">
+      <img class="dtp-logo" src="../../static/images/logo-dtp.png" alt="">
+      <div class="header-text-container">
+        <div class="dept-group">
+          <p>Diretoria de Relacionamento, Desenvolvimento e Informações - DRD</p>
+          <p>Departamento de Inovação - DEIN</p>
+          <p>Divisão de Estruturação, Processos e Tecnologia para Inovação - DIEP</p>
+        </div>
+        <div class="meta-info">
+          <p>Processo de Inovação Dataprev</p>
+          <p>Ficha Técnica da Idéia</p>
+        </div>
       </div>
     </div>
+  
+  <div class="" id="espaco">
+
   </div>
   <!-- HEADER -->
 
-  <!-- BODY -->
   <div class="document">
     <!-- PRIMEIRA PÁGINA -->
     <h1 class="doc-title">
@@ -163,10 +165,9 @@ na legislação da CVM.</li>
 
   <!-- BODY -->
 
-</div>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="js/script.js"></script>
 </body>
 
 </html>
