--- a/ideax/static/css/idea.css
+++ b/ideax/static/css/idea.css
@@ -1454,3 +1454,111 @@ padding: 8% 15% 0 15%;
 .hide{
   display: none;
 }
+
+
+.group{
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  padding: 0 50px;
+  flex-wrap: wrap;
+}
+
+.idea-card{
+  border: 1px solid #dddddd;
+  height: 400px;
+  width: 270px !important;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+}
+
+.idea-card .img-analytics{
+  width: 100%;
+  height: 120px;
+  background-image: url("https://cdn.pixabay.com/photo/2017/10/17/14/10/financial-2860753_960_720.jpg");
+  background-size: cover;
+  background-repeat: space;
+  background-position-y: -10px;
+}
+
+
+.idea-card .img-gestao{
+  width: 100%;
+  height: 120px;
+  background-image: url("https://cdn.pixabay.com/photo/2018/03/28/09/44/document-3268750_960_720.jpg");
+  background-size: cover;
+  background-repeat: space;
+  background-position-y: -10px;
+}
+
+.idea-card .img-support{
+  width: 100%;
+  height: 120px;
+  background-image: url("https://cdn.pixabay.com/photo/2018/02/14/10/28/business-3152586_960_720.jpg");
+  background-size: cover;
+  background-repeat: space;
+  background-position-y: -30px;
+}
+
+.idea-card h1{
+
+  margin-top: 10px;
+  font-size: 0.95em;
+  font-weight: bold;
+  line-height: 1.3;
+
+}
+
+.card-author{
+  font-size: 0.7em;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: rgba(1,1,1,0.7);
+}
+
+.idea-card .cat-name{
+  margin-top: 10px;
+  font-size: 0.7em;
+  font-weight: bold;
+  border-bottom: 1px solid rgba(1,1,1,0.2);
+  padding-bottom: 10px;
+
+}
+
+.idea-card-body{
+  padding: 0 20px ;
+}
+
+.short-desc{
+  font-size: 0.83em;
+  color: #6a6a6a;
+}
+
+.card-phase{
+  font-size: 0.7em;
+  font-weight: bold;
+  padding: 10px 0;
+  color: #6a6a6a;
+ }
+
+.card-line{
+  margin-top: 20px;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+
+}
+
+.discussion{
+  background-color: red;
+}
+
+.evaluation{
+  background-color:#054a02;
+}
+
+.aprove{
+  background-color: #2b3ba6;
+}
