--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -1,83 +1,26 @@
 <!-- {% load widget_tweaks i18n %} -->
 
-<div class="idea {{idea.get_current_phase.css_class}}">
-  <!-- idea card header -->
-  <div class="idea-header">
-    <h1 class="idea-title" data-toggle="tooltip" data-placement="bottom" title="{{ idea.title }}">
-      {{ idea.title }}
-    </h1>  
-    <!-- idea card phase change and actions -->
-    {% if idea.id in ideas_created_by_me or request.user.userprofile.manager %}
-    <div class="idea-options">
-      <input class="menu-input" type="checkbox" id="menu{{idea.pk}}">
-      <label for="menu{{idea.pk}}">
-        <i class="fas fa-bars"></i>
-      </label>
-      <div class="options-content">
-        <ul>
-          {% if request.user.userprofile.manager %}
-            <li><a href="{% url 'change_phase' pk=idea.pk new_phase=1%}">{% trans 'Discussion' %}</a></li>
-            <li><a href="{% url 'change_phase' pk=idea.pk new_phase=2%}">{% trans 'Evaluation' %}</a></li>
-            <li><a href="{% url 'change_phase' pk=idea.pk new_phase=3%}">{% trans 'Approval' %}</a></li>
-            <li><a href="{% url 'change_phase' pk=idea.pk new_phase=4%}">{% trans 'Development' %}</a></li>
-            <li><a href="{% url 'change_phase' pk=idea.pk new_phase=5%}">{% trans 'Finished' %}</a></li>
-            <li><a href="{% url 'change_phase' pk=idea.pk new_phase=6%}">{% trans 'Archived' %}</a></li>
-            <li><a href="{% url 'change_phase' pk=idea.pk new_phase=7%}">{% trans 'Freezed' %}</a></li>
-          {% endif %}
-          <li class="actions">
-            {% if idea.id in ideas_created_by_me or request.user.userprofile.manager %}
-            <div class="action edit">
-              <a class="js-update-idea" href="{% url 'idea_edit' pk=idea.pk %}"><i class="far fa-edit"></i></a>
-            </div>
-            <div class="action delete">
-              <button class="js-remove-idea" data-modal="#modal-idea-crud" data-url="{% url 'idea_remove' pk=idea.pk %}"><i class="far fa-trash-alt"></i></button>
-            </div>
-            {%endif%}
-          </li>
-        </ul>
+<div class="idea-card">
+  <div class="img-analytics">
+    <img style="width: 100%; height: 120px;" src="{{ idea.category.category_image.image}}" alt="" />
+  </div> <!-- IMAGEM DA CATEGORIA -->
+  <div class="idea-card-body">
+    <div>
+      <div class="cat-name">
+        {{ idea.category.title }}
       </div>
+      <div class="vote"></div>
     </div>
-    {%endif%}
-  </div>
-  <!-- idea body -->
-
-  <div class="idea-body" onclick="document.location.href='{% url 'idea_detail' pk=idea.pk %}'">
-        <!-- <p class="idea-title"></p> -->
-    <p class="idea-author"><span class="bold">Autor: </span>{{idea.author.user.get_full_name}}</p>
-    <p class="idea-description"><span class="bold">{% trans 'Description' %}: </span>
-      {%if idea.solution|length >= 400 %}
-        {{ idea.solution|truncatechars:400 }}
-        <span class="read-more">Leia Mais</span>
-      {%else%}
-          {{ idea.solution }}
-      {%endif%}
-    </p>
-  </div>
-  <!-- idea footer -->
-  <div class="idea-footer">
-    <div class="phase">
-        <div class="phase-symbol {{ idea.get_current_phase.css_class }}-phase">
-          <i class="fas fa-{{ idea.get_current_phase.css_icon_class}}"></i>
-        </div>
-        <p class="phase-name">{{ idea.get_current_phase.description }}</p>
+    <h1>{{ idea.title }}</h1>
+    <div class="card-author">
+        Por {{idea.author.user}}
     </div>
-    <div class="like-menu">
-      <div class="liked">
-        <a class="like" onclick="vote('{% url 'like_ideia' pk=idea.pk %}', '.liked_idea_{{idea.id}}', '.disliked_idea_{{idea.id}}', '.like_{{idea.id}}', '.dislike_{{idea.id}}')" href="javascript:void(0)">
-          <i class="{%if idea.id in ideas_liked %} fas {% else %} far {% endif %} fa-thumbs-up like_{{idea.id}}" ></i>
-          <p class="liked_idea_{{idea.id}} ">
-            {{ idea.count_likes }}
-          </p>
-        </a>
-      </div>
-      <div class="disliked">
-        <a class="dislike" onclick="vote('{% url 'dislike_ideia' pk=idea.pk %}', '.liked_idea_{{idea.id}}', '.disliked_idea_{{idea.id}}', '.like_{{idea.id}}', '.dislike_{{idea.id}}')" href="javascript:void(0)">
-          <i class="{%if idea.id in ideas_disliked %} fas {% else %} far {% endif %} fa-thumbs-down dislike_{{idea.id}}"></i>
-          <p class="disliked_idea_{{idea.id}}">
-            {{ idea.count_dislikes }}
-          </p>
-        </a>
-      </div>
+    <div class="short-desc">
+      {{ idea.solution|truncatechars:140 }}
+    </div>
+    <div class="card-line {{idea.get_current_phase.css_class}}"></div>
+    <div class="card-phase">
+      {{ idea.get_current_phase.description }}
     </div>
   </div>
 </div>
