--- a/ideax/static/css/idea.css
+++ b/ideax/static/css/idea.css
@@ -138,8 +138,8 @@ border-bottom: 1px solid #E1E1E1;
 height: 80px !important;
 }
 
-.fixed ~ #idea-list{
-  margin-top: 80px;
+.fixed ~ .group{
+  margin-top: 130px;
 }
 
 nav.phase-filter {
@@ -734,8 +734,8 @@ footer.landing-page{
 }
 
 .modal-header svg{
-    font-size: 2em;
-    margin-right: 10px;
+    font-size: 1.7em;
+    margin-right: 4px;
     color: #36aed3;
 }
 
@@ -771,6 +771,48 @@ input#id_title {
   -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
 }
+
+#modal-term .modal-dialog{
+  max-width: 900px !important;
+}
+
+#modal-term .modal-body{
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+#modal-term .modal-header{
+  justify-content: center;
+}
+
+.term-btn{
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 8px;
+  font-weight: bold;
+}
+
+
+#term-accept{
+  background-color: #32b384;
+  border: 1px solid #2c9b72;
+  color: white;
+}
+
+#term-accept:hover{
+  text-decoration: none;
+  background-color: #2c9b72;
+}
+
+#modal-term .modal-header svg{
+    font-size: 1.3em;
+    margin-right: 4px;
+    color: #2c9b72;
+}
+
+
 
 /*Corpo da página de ideia*/
 
@@ -1462,6 +1504,8 @@ padding: 8% 15% 0 15%;
   justify-content: space-around;
   padding: 0 50px;
   flex-wrap: wrap;
+  content: "";
+  flex: auto;
 }
 
 .idea-card{
@@ -1471,7 +1515,21 @@ padding: 8% 15% 0 15%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  margin-bottom: 60px;
 
+}
+
+.img-container{
+  width: 100%;
+  height: 120px;
+  position: relative;
+  overflow: hidden;
+}
+
+.img-container img{
+  width: 100%;
+  height: auto;
+  position: absolute;
 }
 
 .idea-card .img-analytics{
@@ -1527,8 +1585,21 @@ padding: 8% 15% 0 15%;
 
 }
 
-.idea-card-body{
+.idea-content{
   padding: 0 20px ;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.idea-card-body{
+  max-height: 219px;
+  overflow: hidden;
+}
+
+.idea-card-footer{
+
 }
 
 .short-desc{
